<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/product_sans_regular"
                    android:text="@string/appbar_settings"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textFontWeight="600" />

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.dashboard.DashboardFragment">

            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/row2"
                android:layout_width="0dp"
                android:layout_height="175dp"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/appVersion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentBottom="true"
                            android:fontFamily="@font/product_sans_regular"
                            android:gravity="center"
                            android:text="@string/app_version_tm"
                            android:textAlignment="center"
                            android:textSize="20sp" />


                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/info_btn"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"

                    app:cardCornerRadius="20dp"
                    app:cardElevation="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="@font/product_sans_regular"
                            android:gravity="center"
                            android:text="@string/info"
                            android:textSize="20sp" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <FrameLayout
                android:id="@+id/child_fragment_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/row2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>