<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin">

                <TextView
                    android:textFontWeight="600"
                    android:fontFamily="@font/product_sans_regular"
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/appbar_gunbatar"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            tools:context=".MainActivity">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/constraintLayout">


                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="250dp"
                    android:id="@+id/amazonImage"
                    android:src="@drawable/fony"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="175dp"
                    android:id="@+id/row1"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/amazonImage">


                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/adminPanel"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        app:cardElevation="20dp"
                        app:cardCornerRadius="20dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/panel_text"
                                android:text="@string/admin_panel_tm"
                                android:textSize="24sp"

                                android:fontFamily="@font/product_sans_regular"
                                android:layout_marginTop="10dp"
                                android:layout_centerHorizontal="true"
                                android:layout_below="@+id/panel_image" />

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:id="@+id/panel_image"
                                android:src="@drawable/dashboard"
                                android:layout_marginTop="20dp"
                                android:layout_centerHorizontal="true" />

                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="175dp"
                    android:id="@+id/row2"
                    android:padding="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/row1">


                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        app:cardElevation="20dp"
                        android:id="@+id/chareler_cardview"
                        app:cardCornerRadius="20dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/charelerText"
                                android:text="@string/chareler_tm"
                                android:textSize="20dp"

                                android:fontFamily="@font/product_sans_regular"
                                android:layout_marginTop="10dp"
                                android:layout_centerHorizontal="true"
                                android:layout_below="@+id/charelerImage" />

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="60dp"
                                android:id="@+id/charelerImage"
                                android:src="@drawable/careler"
                                android:layout_marginTop="15dp"
                                android:layout_centerHorizontal="true" />

                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>



                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        app:cardElevation="20dp"
                        android:id="@+id/news_cardview"
                        app:cardCornerRadius="20dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/questionText2"
                                android:text="@string/news_tm"
                                android:textSize="20dp"

                                android:fontFamily="@font/product_sans_regular"
                                android:layout_marginTop="10dp"
                                android:layout_centerHorizontal="true"
                                android:layout_below="@+id/newsImage" />
                            <ImageView
                                android:layout_alignParentEnd="true"
                                android:layout_width="50dp"
                                android:layout_height="45dp"
                                android:src="@drawable/work_in_progress"
                                />
                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="60dp"
                                android:id="@+id/newsImage"
                                android:src="@drawable/news"
                                android:layout_marginTop="15dp"
                                android:layout_centerHorizontal="true" />

                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="175dp"
                    android:id="@+id/row4"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/row2">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        app:cardElevation="20dp"
                        android:id="@+id/gallery_cardview"
                        app:cardCornerRadius="20dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/questionText"
                                android:text="@string/gallery_tm"
                                android:textSize="20dp"

                                android:fontFamily="@font/product_sans_regular"
                                android:layout_marginTop="10dp"
                                android:layout_centerHorizontal="true"
                                android:layout_below="@+id/questionImage" />
                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="60dp"
                                android:id="@+id/questionImage"
                                android:src="@drawable/gallery"
                                android:layout_marginTop="15dp"
                                android:layout_centerHorizontal="true" />

                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:id="@+id/teachers_cardview"
                        app:cardElevation="20dp"
                        app:cardCornerRadius="20dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/grocName3"
                                android:text="@string/teachers_tm"
                                android:textSize="20dp"
                                android:fontFamily="@font/product_sans_regular"
                                android:layout_marginTop="10dp"
                                android:layout_centerHorizontal="true"
                                android:layout_below="@+id/advantagesImage" />
                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="60dp"
                                android:id="@+id/advantagesImage"
                                android:src="@drawable/teachers"
                                android:layout_marginTop="15dp"
                                android:layout_centerHorizontal="true" />

                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="175dp"
                    android:id="@+id/row5"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/row4"

                    >


                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        app:cardElevation="20dp"
                        android:id="@+id/register_cardview"
                        app:cardCornerRadius="20dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/registrationText"
                                android:text="@string/registration"
                                android:textSize="20dp"

                                android:fontFamily="@font/product_sans_regular"
                                android:layout_marginTop="10dp"
                                android:layout_centerHorizontal="true"
                                android:layout_below="@+id/resgisterImg" />
                            <ImageView
                                android:layout_alignParentEnd="true"
                                android:layout_width="50dp"
                                android:layout_height="45dp"
                                android:src="@drawable/work_in_progress"
                                />
                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="60dp"
                                android:id="@+id/resgisterImg"
                                android:src="@drawable/advantages"
                                android:layout_marginTop="15dp"
                                android:layout_centerHorizontal="true" />

                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.core.widget.NestedScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>